...

    // MARK: - UI Elements

    lazy var tableView: UITableView = {
        let table = UITableView()
        table.tableFooterView = UIView()
        table.accessibilityLabel = "list_table"
        table.contentInset = UIEdgeInsets(top: 8, left: 0, bottom: 16, right: 0)
        table.separatorStyle = .none
        return table
    }()

    lazy var errorLabel: UILabel = {
...
        label.clipsToBounds = true
        label.textAlignment = .center
        label.accessibilityLabel = "error_label"
        return label
    }()

    lazy var spinner: UIActivityIndicatorView = {
        let spinner = UIActivityIndicatorView(style: .large)
        spinner.hidesWhenStopped = true
        spinner.accessibilityLabel = "spinner"
        return spinner
    }()

...
